$Id: ChangeLog,v 1.229 2005/06/26 12:40:58 chaac Exp $

2005-06-26  Vesa Jaaskelainen  <chaac@.nic.fi>

	* dev/ahdlc0.c: Added support for raw mode. When enabled, raw mode 
	disables all data encapsulation. This allows pausing of PPP session.

	* include/dev/uart.h: Added RAW mode defines UART_SETRAWMODE and
	UART_GETRAWMODE. Used to control raw mode.

	* include/dev/uartavr.h: Added RAW mode control flag.

2005-06-26  Vesa Jaaskelainen  <chaac@.nic.fi>

	* conf/crt/crt.nut: Added forgotten kbhit.c to build process.

2005-06-22  Matthias Ringwald  <mringwal@.inf.ethz.ch>
    * dev/null.c, include/dev/null.h: added /dev/null as devNull.
    write always returns len of bytes to write, read returns
    without read bytes and ioctl always returns ok.
    This can be used to discard output of printf statements.
    
2005-06-14  Matthias Ringwald  <mringwal@.inf.ethz.ch>
 	* os/timer.c: Fixed NutTimerStopAsync(): it now removes
    callback ptr, which actually stops the timer

2005-06-13  Ole Reinhardt <ole.reinhardt@embedded-it.de>
 	* dev/adc.c: Removed unnecessary NutExitCritical

2005-06-12  Harald Kipp  <harald.kipp@egnite.de>

	* arch/avr/os/timer.c: Timer configuration registers and values
	are now specified by preprocessor macros. This avoids code
	contamination with preprocessor conditionals. A note has been
	added to the documentation of NutDelay(), saying, that this
	code may not work. The timer interrupt handler had been moved
	to the hardware independent code. A new function CountCpuLoops()
	has been added to count the number of loops from timer start
	to timer overflow. In opposite to the previous check in
	NutComputeCpuClock(), this new routine will not use interrupts
	and thus will not initialize the timer for system use. This
	is now done in another new function NutRegisterTimer(), which
	contains all hardware dependent initialization previously
	done by NutInit(). The latter had been moved to the hardware